[gd_scene load_steps=13 format=3 uid="uid://je2p1d20yrrw"]

[ext_resource type="Script" path="res://Assets/Mobs/EnemyBase.gd" id="1_nwlak"]
[ext_resource type="Texture2D" uid="uid://cenbin67g5qte" path="res://Assets/Mobs/Shadow1.png" id="2_jr0is"]
[ext_resource type="Texture2D" uid="uid://ggg6nj2cgyw6" path="res://Assets/Mobs/Shadow2.png" id="3_l7g6y"]
[ext_resource type="Texture2D" uid="uid://d1m5vxwsfjx0s" path="res://Assets/Mobs/Shadow3.png" id="4_0pne4"]
[ext_resource type="Texture2D" uid="uid://bfoaxpyayrbqo" path="res://Assets/Mobs/Shadow4.png" id="5_23jf0"]
[ext_resource type="Texture2D" uid="uid://c7bg74xjgp77t" path="res://Assets/Mobs/Shadow5.png" id="6_jwm4c"]
[ext_resource type="Texture2D" uid="uid://c00wega7kkgvn" path="res://Assets/Mobs/Shadow6.png" id="7_bvbl1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ug8rx"]
size = Vector2(22, 35)

[sub_resource type="SpriteFrames" id="SpriteFrames_rpt12"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jr0is")
}, {
"duration": 1.0,
"texture": ExtResource("3_l7g6y")
}, {
"duration": 1.0,
"texture": ExtResource("4_0pne4")
}, {
"duration": 1.0,
"texture": ExtResource("5_23jf0")
}, {
"duration": 1.0,
"texture": ExtResource("6_jwm4c")
}, {
"duration": 1.0,
"texture": ExtResource("7_bvbl1")
}, {
"duration": 1.0,
"texture": ExtResource("6_jwm4c")
}, {
"duration": 1.0,
"texture": ExtResource("5_23jf0")
}, {
"duration": 1.0,
"texture": ExtResource("4_0pne4")
}, {
"duration": 1.0,
"texture": ExtResource("3_l7g6y")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0pkhv"]
radius = 57.2713

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h063q"]
size = Vector2(24, 37)

[sub_resource type="CircleShape2D" id="CircleShape2D_x1iec"]

[node name="EnemyBase" type="CharacterBody2D"]
script = ExtResource("1_nwlak")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, -6.5)
shape = SubResource("RectangleShape2D_ug8rx")
debug_color = Color(0.538117, 0.512163, 0.665631, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -8)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_rpt12")
frame_progress = 0.50394
offset = Vector2(3, 1)

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_0pkhv")

[node name="PlayerDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(3, -6.5)
shape = SubResource("RectangleShape2D_h063q")

[node name="SpellDetection" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpellDetection"]
scale = Vector2(25, 25)
shape = SubResource("CircleShape2D_x1iec")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_entered" from="SpellDetection" to="." method="_on_spell_detection_body_entered"]
[connection signal="body_exited" from="SpellDetection" to="." method="_on_spell_detection_body_exited"]
